style.css
* {
    box-sizing: border-box;
}

#conteiner {
    max-width: 1244px;
    margin: auto;
    font-family: Open Sans, arial;
    padding: 0px 2px;

}

nav {
    overflow: hidden;
    position: sticky;
    top: 0.1px;
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.7);
}

nav a {
    display: block;
    width: 20%;
    float: left;
    background-color: rgba(0, 0, 0, 0);
    text-align: center;
    text-decoration: none;
    text-decoration: none;
    color: #ffffff;
    height: 43px;
    z-index: 100;
    padding: 15px;
    transition: all 0.5s ease;

}

a.menu:hover {
    font-size: 18px;
    color: #f7dfec;
    box-sizing: border-box;
    border: solid 2px #f7dfec;
    border-radius: 5px;
    margin-top: 0.5px;
}

.menu.active {
    font-size: 18px;
    color: #eef091;
    box-sizing: border-box;
    border: solid 2px #eef091;
    border-radius: 5px;
    margin-top: 0.5px;
    transition-duration: 0.4s;
}

header {
    width: 1240px;
    background-image: url(logopedalong.jpg);
    background-position: center 43px;
    background-size: 88%;
    background-attachment: fixed;
    background-clip: border-box;
    background-repeat: no-repeat;

    height: 23vw;
    display: block;

    background-attachment: fixed;
}
/*
header img {
    background-image: url(logopedalong.jpg);
    background-repeat: no-repeat;
    background-position: center 43px;
    background-size: 100%;
    width: 100%;
    display: block;
    height: 350px;
    background-attachment: fixed;
}
*/
article {
    max-width: 1240px;
    margin-top: 5px;
    margin-bottom: 30px;
    padding: 5px;
}

.therapy {

    border-radius: 25px;
    display: inline-block;
}

article h1 {

    text-align: center;
    font-size: 35px;
    margin: 0 20% 5px 40%;
    padding-bottom: 10px;
}

.therapy h1 {
    display: block;
    text-align: center;
    font-size: 35px;
    padding-top: 50px;
    padding-bottom: 10px;
    margin: auto;
}

.boxter {
    display: inline-block;
    width: 33%;
    height: 350px;
    border: 3px solid #f7dfec;
    border-radius: 20px;
    padding: 5px;
    background-color: rgba(247, 223, 236, 0.33);
    overflow: hidden;
}

.therapy h3 {
    display: inline-block;
    font-size: 27px;
    text-align: center;
    width: 70%;
    padding: 15px;
}

.tex {
    display: inline-block;
    border: none;
    width: 100%;
}

img.face {
    width: 25%;
    float: left;
    padding: 10px;
    display: inline-block;
    border-radius: 40% 15%;
    border: 3px solid #f7dfec;
    margin: 0 2px 0 2px;
}

article p {
    text-align: justify;
    float: left;
    width: 74%;
    padding: 10px;
    line-height: 24px;
    font-size: 18px;
    border-top: 3px solid #f7dfec;
    border-bottom: 3px solid #f7dfec;
}

img.ter {
    width: 27%;
    display: inline-block;
    border-radius: 15% 40%;
    border: 3px solid #f7dfec;
    margin-left: 10px;
    margin-bottom: auto;
    float: left;
}

.boxter:hover {
    border-color: #facae4;
    background-color: rgba(247, 223, 236, 0.5);
    transition-duration: 0.4s;
}

.clear {
    clear: both;
}

.box {
    padding-top: 40px;
    width: 100%;
    text-align: center;
}
/*
.iconfb {

    width: 30%;
    margin-right: 50px;
}
*/

.iconfb {
display: inline-block;
width:300px;
height:300px;
border-radius: auto;
margin-right: 50px;
background:url('iconFB.png');
background-repeat: no-repeat;
background-position: center;
}
.iconfb:hover{
background:url('iconFBh.png');
}

.iconin {
display: inline-block;
width:300px;
height:300px;
border-radius: 50%;
margin-right: 50px;
background:url('iconINS.png');
background-repeat: no-repeat;
background-position: center;
}
.iconin:hover{
background:url('iconINSh.png');
}

.icontel {
display: inline-block;
width:300px;
height:300px;
border-radius: 50%;
margin-right: 50px;
background:url('iconTEL.png');
background-repeat: no-repeat;
background-position: center;
}
.icontel:hover{
background:url('iconTELh.png');
background-repeat: no-repeat;
}


.icond {
    width: 50%;

}

.iconm {
    width: 50%;
}


#footer {
    width: 100%;
    height: auto;
    background-color: rgba(0, 0, 0, 0.7);
    text-align: center;
    border-radius: 5px;

}

.footerTEXT {

    color: #ffffff;
    font-size: 20px;
    padding: 10px;
}


@media (max-width: 500px) {
    nav a {
        width: 100%;
    }

    img.face {
        width: 100%;
        height: 100%
    }

    article p {
        width: 100%;
    }

    .boxter {
        width: 100%
    }

    img.ter {
        width: 100%;
        height: 100%;
    }

}


/**/
/**//* CSS for Cennik*/
/**/


li.name {
    float: left;
    border: 3px solid #f7dfec;
    margin: 5px 5px 5px 5px;
    padding: 5px;
    font-family: sans-serif;
    font-size: 24px;
    width: 70%;
    border-radius: 5px;

}

li.price {
    display: blockl;
    float: left;
    border: 3px solid #f7dfec;
    margin: 5px 5px 5px 2px;
    padding: 5px;
    font-family: sans-serif;
    font-size: 24px;
    width: 20%;
    border-radius: 5px;
}

ul {
    padding: 0 10% 0 30%;
    display: inline-block;
}


/**/
/**//* CSS for Kontakt*/
/**/


.boxkontakt a{
    clear: both;
    display: inline-block;

}

.boxkontakt .boxter {
    text-align: center;
    width: 50%;
    height: 200px;
    margin-top: 0px;
    margin-left: 20px;
    margin-bottom: 50px;
}

/**/
/**//* CSS for Terapia*/
/**/

.therapyt img{
    position: static;
    display: inline-block;
    width: 30%;
}

.therapyt .boxter{
    position: static;
    display: inline-block;
    width: 60%;
    height: 369px;
    margin-left: 5%;

}
.therapyt h1 {

    font-family: sans-serif;
    font-size: 38px;
    text-align: center;
    padding: 25px;
}


.therapyt h3 {

    font-family: sans-serif;
    font-size: 30px;
    text-align: center;
    padding: 5px;
}

